8173195: [BACKOUT] 8087341: C2 doesn't optimize redundant memory operations with G1

Backing out 8087341 due to 8172850. Will be re-implemented with 8173196.

Reviewed-by: kvn